Removed any references to Jooq, flatten into one unique module, sign in form.